Fix ViewPagerIndicator dependency and remove org.apache* dependency